Prevent flicker in webview loading

--- a/styles/aizu-online-judge.less
+++ b/styles/aizu-online-judge.less
@@ -7,6 +7,11 @@
 .aoj-problem-viewer {
   color: @text-color;
 
+  webview.hidden-webview {
+    flex: 0 1;
+    height: 0;
+  }
+
   .description {
     border: none;
     width: 100%;
